--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "query-string": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
-    "react-toastify": "^4.0.1"
+    "react-toastify": "^4.0.1",
+    "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
