--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - npm run test
   - popd
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_19f1f1d7001a_key -iv $encrypted_19f1f1d7001a_iv -in deploy_key.enc -out deploy_key -d
+  - openssl aes-256-cbc -K $encrypted_19f1f1d7001a_key -iv $encrypted_19f1f1d7001a_iv -in deploy_key.enc -out /tmp/deploy_key -d
 deploy:
   provider: script
   script: bash .travis_deploy.sh
