Add Slack notifications to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,5 @@ deploy:
   script: bash .travis_deploy.sh
   on:
     branch: production
+notifications:
+  slack: radiodiodi:bKmg9JXX91Ijut1X6dy5zcK1
