--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,9 @@ matrix:
         - npm run test
 
     - name: Deployment
+      language: node_js
+      node_js:
+        - '10'
       before_deploy:
         - openssl aes-256-cbc -K $encrypted_19f1f1d7001a_key -iv $encrypted_19f1f1d7001a_iv -in deploy_key.enc -out /tmp/deploy_key -d
       deploy:
