--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-matrix:
+jobs:
   include:
-    - name: Backend
+    - stage: test
       language: python
       python:
         - 3.6
@@ -10,8 +10,7 @@ matrix:
         - pip install -r requirements.txt
       script:
         - python manage.py test
-
-    - name: Frontend
+    - stage: test
       language: node_js
       node_js:
         - '10'
@@ -22,8 +21,7 @@ matrix:
         - npm run build
       script:
         - npm run test
-
-    - name: Deployment
+    - stage: deploy
       language: node_js
       node_js:
         - '10'
