--- a/.travis.yml
+++ b/.travis.yml
@@ -22,16 +22,15 @@ jobs:
       script:
         - npm run test
     - stage: deploy
+      if: branch = production
       language: node_js
       node_js:
         - '10'
-      before_deploy:
+      before_script:
         - openssl aes-256-cbc -K $encrypted_19f1f1d7001a_key -iv $encrypted_19f1f1d7001a_iv -in deploy_key.enc -out /tmp/deploy_key -d
-      deploy:
+      script:
         provider: script
         script: bash .travis_deploy.sh
-        on:
-          branch: production
 
 notifications:
   email: false
