--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
         - '10'
       before_script:
         - openssl aes-256-cbc -K $encrypted_19f1f1d7001a_key -iv $encrypted_19f1f1d7001a_iv -in deploy/deploy_key.enc -out deploy/deploy_key -d
-      script: bash deploy.sh
+      script: bash deploy/deploy.sh
 
 notifications:
   email: false
